--- a/src/components/ImageSection/style.css
+++ b/src/components/ImageSection/style.css
@@ -2,6 +2,8 @@
   width: 100%;
   height: 100%;
   background-color: #f1f6fe;
+  background-image: url("../../assets/bg1.png");
+  background-size: 100%;
 }
 
 .imageGrid {
